# hijacker2

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
src/: cli_args.rs  lib.rs  main.rs
